AFS_Dev/src/objects/Dashboard_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>Dashboard__c</fullName>
        <label>Dashboard</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dashboard_Analytics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Dashboard Analytics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>Dashboard__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dashboard Analytic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>